Extra file stuff (#1)
* README.rst -> README.md

* Create LICENSE

* Delete poetry.lock

* style(git): sort .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,115 +1,111 @@
-.idea/
-cmake-build-*/
-.idea/**/mongoSettings.xml
-*.iws
-out/
-.idea_modules/
-atlassian-ide-plugin.xml
-.idea/replstate.xml
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
-.idea/httpRequests
-.idea/caches/build_file_checksums.ser
+__pycache__/
+__pypackages__/
+/site
+.cache
+.coverage
+.coverage.*
+.directory
+.dmypy.json
+.eggs/
+.env
+.fuse_hidden*
+.hypothesis/
+.idea*/
+.installed.cfg
+.ipynb_checkpoints
+.mypy_cache/
+.nfs*
+.nox/
+.pybuilder/
+.pyre/
+.pytest_cache/
 .Python
+.pytype/
+.ropeproject
+.scrapy
+.spyderproject
+.spyproject
+.tox/
+.Trash-*
+.venv
+.webassets-cache
 [Bb]in
+[Dd]esktop.ini
 [Ii]nclude
 [Ll]ib
 [Ll]ib64
 [Ll]ocal
 [Ss]cripts
-pyvenv.cfg
-.venv
-pip-selfcheck.json
-*~
-.fuse_hidden*
-.directory
-.Trash-*
-.nfs*
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
-*.stackdump
-[Dd]esktop.ini
 $RECYCLE.BIN/
 *.cab
+*.cover
+*.egg
+*.egg-info/
+*.iws
+*.lnk
+*.log
+*.manifest
+*.mo
 *.msi
 *.msix
 *.msm
 *.msp
-*.lnk
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-*.manifest
-*.spec
-pip-log.txt
-pip-delete-this-directory.txt
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
-*.mo
 *.pot
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-instance/
-.webassets-cache
-.scrapy
-docs/_build/
-.pybuilder/
-target/
-.ipynb_checkpoints
-profile_default/
-ipython_config.py
-__pypackages__/
+*.py,cover
+*.py[cod]
+*.sage.py
+*.so
+*.spec
+*.stackdump
+*~
+*$py.class
+*venv*/
+atlassian-ide-plugin.xml
+build/
 celerybeat-schedule
 celerybeat.pid
-*.sage.py
-.env
+cmake-build-*/
+com_crashlytics_export_strings.xml
+cover/
+coverage.xml
+crashlytics-build.properties
+crashlytics.properties
+cython_debug/
+db.sqlite3
+db.sqlite3-journal
+develop-eggs/
+dist/
+dmypy.json
+docs/_build/
+downloads/
+eggs/
+ehthumbs_vista.db
+ehthumbs.db
 env/
-*venv*/
 ENV/
 env.bak/
+fabric.properties
+htmlcov/
+instance/
+ipython_config.py
+lib/
+lib64/
+local_settings.py
+MANIFEST
+nosetests.xml
+out/
+parts/
+pip-delete-this-directory.txt
+pip-log.txt
+pip-selfcheck.json
+poetry.lock
+profile_default/
+pyvenv.cfg
+sdist/
+share/python-wheels/
+target/
+Thumbs.db
+Thumbs.db:encryptable
+var/
 venv.bak/
-.spyderproject
-.spyproject
-.ropeproject
-/site
-.mypy_cache/
-.dmypy.json
-dmypy.json
-.pyre/
-.pytype/
-cython_debug/
+wheels/
